--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "grunt-sync": "0.2.4",
     "include-all": "~0.1.6",
     "jsdom": "^8.4.0",
+    "mongodb": "1.4",
+    "node-rest-client": "^1.8.0",
     "rc": "1.0.1",
     "sails": "~0.12.3",
     "sails-disk": "~0.10.9",
