--- a/package.json
+++ b/package.json
@@ -20,12 +20,13 @@
     "grunt-sync": "0.2.4",
     "include-all": "~0.1.6",
     "jsdom": "^8.4.0",
-    "mongodb": "1.4",
+    "mongodb": "~1.4",
     "node-rest-client": "^1.8.0",
     "rc": "1.0.1",
     "sails": "~0.12.3",
     "sails-disk": "~0.10.9",
     "sails-hook-jobs": "^0.1.3",
+    "sails-mongo": "^0.12.0",
     "url-assembler": "^1.2.4"
   },
   "scripts": {
