Implement react router

--- a/package.json
+++ b/package.json
@@ -18,17 +18,19 @@
     "grunt-contrib-uglify": "0.7.0",
     "grunt-contrib-watch": "0.5.3",
     "grunt-sails-linker": "~0.10.1",
+    "grunt-shell": "^1.1.2",
     "grunt-sync": "0.2.4",
     "grunt-typescript-compile": "0.2.0",
-    "grunt-shell": "^1.1.2",
     "include-all": "~0.1.6",
     "jsdom": "^8.4.0",
     "lodash": "*",
     "mongodb": "~1.4",
     "node-rest-client": "^1.8.0",
     "rc": "1.0.1",
-    "react": "^0.13.3",
+    "react": "^15.0.1",
     "react-bootstrap": "^0.20.3",
+    "react-dom": "^15.0.1",
+    "react-router": "^2.3.0",
     "sails": "~0.12.3",
     "sails-disk": "~0.10.0",
     "sails-hook-babel": "^6.0.1",
