--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "a Sails application",
   "keywords": [],
   "dependencies": {
+    "axios": "^0.10.0",
     "babelify": "^6.1.3",
     "ejs": "2.3.4",
     "grunt": "0.4.5",
@@ -25,21 +26,25 @@
     "jsdom": "^8.4.0",
     "lodash": "*",
     "mongodb": "~1.4",
-    "node-rest-client": "^1.8.0",
+    "query-string": "^4.1.0",
     "rc": "1.0.1",
     "react": "^15.0.1",
     "react-bootstrap": "^0.20.3",
     "react-dom": "^15.0.1",
+    "react-resolver": "^2.0.5",
     "react-router": "^2.3.0",
+    "request": "^2.72.0",
     "sails": "~0.12.3",
     "sails-disk": "~0.10.0",
     "sails-hook-babel": "^6.0.1",
     "sails-hook-jobs": "^0.1.3",
     "sails-mongo": "^0.12.0",
-    "url-assembler": "^1.2.4"
+    "throttled-request": "^0.1.1"
   },
   "devDependencies": {
     "babel-eslint": "^3.1.1",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
     "eslint": "^0.20.0",
     "eslint-loader": "^0.11.1",
     "eslint-plugin-react": "^2.2.0",
